--- a/memes.css
+++ b/memes.css
@@ -1,16 +1,16 @@
 body {
-    font-family: "Trebuchet MS", Verdana, sans-serif;
-    font-size: 36px;
-    background-color: dimgrey; 
+    font-family: "Lucida Console", Monaco, monospace;
+    font-size: 18px;
+    background-color: #CCCCFF; 
     color: #696969;
     padding: 3px;
 }
 
 #main {
-    padding: 20px;
-    padding-left:  50px;
+    padding: 10px;
+    padding-left:  15px;
     padding-right: 15px;
-    background-color: #ffffff;
+    background-color: #F0F0FF;
     border-radius: 0 0 5px 5px;
 }
 
