--- a/memes.css
+++ b/memes.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Lucida Console", Monaco, monospace;
     font-size: 18px;
-    background-color: #CCCCFF; 
+    background-color: #F0F0FF; 
     color: #696969;
     padding: 3px;
 }
@@ -10,13 +10,13 @@ body {
     padding: 10px;
     padding-left:  15px;
     padding-right: 15px;
-    background-color: #F0F0FF;
+    background-color: #CCCCFF;
     border-radius: 0 0 5px 5px;
 }
 
 h1 {
-    font-family: Georgia, serif;
-    border-bottom: 3px solid #cc9900;
-    color: #996600;
+    font-family: "Lucida Console", Monaco, monospace;
+    border-bottom: 3px solid #666699;
+    color: #666699;
     font-size: 30px;
 }
